--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "gyaat_group",
+  "name": "gyaat_testings",
   "private": true,
   "version": "0.1.0",
   "type": "module",
-  "homepage": "https://amitgiri1281.github.io/gyaatgroup/",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-  },
+  "homepage": "https://amitgiri1281.github.io/gyaat_testings/",
+ "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "lint": "eslint .",
+  "preview": "vite preview",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist -f --dotfiles"
+}
+,
   "dependencies": {
     "axios": "^1.9.0",
     "cors": "^2.8.5",
